--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 
 	<artifactId>utils-microbenchmark</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 	
 	<name>utils-microbenchmark</name>
 	<description>Utility module to create micro benchmark context</description>
@@ -17,7 +17,7 @@
 		<url>https://github.com/Gilandel/${project.artifactId}.git</url>
 		<connection>scm:git:git://github.com/Gilandel/${project.artifactId}.git</connection>
 		<developerConnection>scm:git:git@github.com:Gilandel/${project.artifactId}.git</developerConnection>
-		<tag>1.0.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 	
 	<issueManagement>
