--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 		<version>1.0.3</version>
 	</parent>
 
+	<groupId>fr.landel.utils</groupId>
 	<artifactId>utils-microbenchmark</artifactId>
 	<version>1.0.1-SNAPSHOT</version>
 	
