--- a/pom.xml
+++ b/pom.xml
@@ -79,10 +79,12 @@
 		<dependency>
 			<groupId>org.openjdk.jmh</groupId>
 			<artifactId>jmh-core</artifactId>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.openjdk.jmh</groupId>
 			<artifactId>jmh-generator-annprocess</artifactId>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 </project>
