--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>fr.landel.utils</groupId>
 	<artifactId>utils-microbenchmark</artifactId>
-	<version>1.0.2</version>
+	<version>1.0.3-SNAPSHOT</version>
 	
 	<name>utils-microbenchmark</name>
 	<description>Utility module to create micro benchmark context</description>
@@ -18,7 +18,7 @@
 		<url>https://github.com/Gilandel/${project.artifactId}.git</url>
 		<connection>scm:git:git://github.com/Gilandel/${project.artifactId}.git</connection>
 		<developerConnection>scm:git:git@github.com:Gilandel/${project.artifactId}.git</developerConnection>
-		<tag>1.0.2</tag>
+		<tag>HEAD</tag>
 	</scm>
 	
 	<issueManagement>
