--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language:
   - java
 
 jdk:
-  - oraclejdk8
+  - oraclejdk9
 
 addons:
   apt:
@@ -11,36 +11,30 @@ addons:
 
 cache:
   directories:
-  # SBT
-  - $HOME/.ivy2/cache
   # Maven
   - $HOME/.m2
-  # SBT binaries
-  - $HOME/sbt
-  # Code coverage
-  - $HOME/ccr
 
 before_cache:
-  # Cleanup the cached directories to avoid unnecessary cache updates
-  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
-  - find $HOME/.sbt        -name "*.lock"               -print -delete
   # Cleanup the project repository
   - rm -rf $HOME/.m2/repository/$GROUP_ID_PATH
 
+before_install:
+  - sudo apt-get install jq
+  
 install:
   # Install Codecov
   - pip install --user codecov
-  # Install Codacity coverage reporter (install SBT + build reporter)
+  # Install Codacity coverage reporter (install build reporter)
   - curl $DEPLOYER_URL/codacity-coverage-reporter-install.sh | sh
 
 script:
-  - mvn clean compile test cobertura:cobertura
+  - mvn clean compile test jacoco:report
 
 after_success:
   # Call Codecov
   - codecov
   # Call Codacity coverage reporter
-  - java -cp $HOME/ccr/codacy-coverage-reporter-assembly.jar com.codacy.CodacyCoverageReporter -l Java -r target/cobertura/coverage.xml
+  - java -cp $HOME/codacy-coverage-reporter-assembly.jar com.codacy.CodacyCoverageReporter -l Java -r target/site/jacoco/jacoco.xml
   - curl $DEPLOYER_URL/codacity-coverage-reporter-clean.sh | sh
   # Stage artifact to Sonatype OSSRH
   - curl $DEPLOYER_URL/deploy.sh | bash
