--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
   # Install Codecov
   - pip install --user codecov
   # Install Codacity coverage reporter (install build reporter)
-  - curl $DEPLOYER_URL/codacity-coverage-reporter-install.sh | sudo sh
+  - curl $DEPLOYER_URL/codacity-coverage-reporter-install.sh | sudo bash
 
 script:
   - mvn clean compile test jacoco:report
@@ -31,7 +31,7 @@ after_success:
   # Call Codecov
   - codecov
   # Call Codacity coverage reporter
-  - curl $DEPLOYER_URL/codacity-coverage-reporter-runner.sh > ~/ccr.sh; sh ~/ccr.sh -l Java -r target/site/jacoco/jacoco.xml
+  - curl $DEPLOYER_URL/codacity-coverage-reporter-runner.sh > ~/ccr.sh && bash ~/ccr.sh -l Java -r target/site/jacoco/jacoco.xml
   # Stage artifact to Sonatype OSSRH
   - curl $DEPLOYER_URL/deploy.sh | bash
 
